Fixed various issues I was having and improved the interface

--- a/components/Pages/LandingPage/index.less
+++ b/components/Pages/LandingPage/index.less
@@ -4,6 +4,13 @@ body {
     background-color: @color-vault-white;
 }
 
+.textarea {
+    width: 100%;
+    height: 100px;
+    padding: 8px;
+    resize: vertical;
+}
+
 .background {
     background-color: @color-vault-white;
     background-size: cover;
